crates/ods-web/tests/snapshots/dashboard__shell_no_store.snap
---
source: crates/ods-web/tests/dashboard.rs
expression: pretty(&body)
---
{
  "mode": "local",
  "project": "jaffle_ods",
  "read_only": true,
  "schema_version": 3,
  "sections": [
    {
      "href": "./",
      "key": "home",
      "label": "Home",
      "note": null,
      "status": "current"
    },
    {
      "href": "catalog",
      "items": [
        {
          "href": "catalog",
          "key": "models",
          "label": "Models"
        },
        {
          "href": "catalog/sources",
          "key": "freshness",
          "label": "Freshness evidence"
        },
        {
          "href": null,
          "key": "semantic",
          "label": "Semantic layer"
        }
      ],
      "key": "catalog",
      "label": "Catalog",
      "note": null,
      "status": "available"
    },
    {
      "href": "lineage",
      "items": [
        {
          "href": "lineage",
          "key": "graph",
          "label": "Graph"
        },
        {
          "href": "lineage/impact",
          "key": "impact",
          "label": "Impact simulator"
        }
      ],
      "key": "lineage",
      "label": "Lineage",
      "note": null,
      "status": "available"
    },
    {
      "href": "state/plan",
      "items": [
        {
          "href": "state/plan",
          "key": "plan",
          "label": "Plan"
        },
        {
          "href": "state/runs",
          "key": "runs",
          "label": "Runs"
        },
        {
          "href": null,
          "key": "history",
          "label": "History"
        },
        {
          "href": null,
          "key": "policies",
          "label": "Policies"
        }
      ],
      "key": "state",
      "label": "State",
      "note": null,
      "status": "available"
    },
    {
      "href": "erd",
      "key": "erd",
      "label": "ERD",
      "note": null,
      "status": "available"
    },
    {
      "href": null,
      "key": "usage",
      "label": "Usage",
      "note": null,
      "status": "planned"
    },
    {
      "href": null,
      "key": "ci",
      "label": "CI · Impact",
      "note": null,
      "status": "planned"
    },
    {
      "href": null,
      "key": "agent",
      "label": "Agent",
      "note": null,
      "status": "planned"
    },
    {
      "href": "settings",
      "items": [
        {
          "href": "settings",
          "key": "configuration",
          "label": "Configuration"
        },
        {
          "href": "settings/about",
          "key": "about",
          "label": "About"
        }
      ],
      "key": "settings",
      "label": "Settings",
      "note": null,
      "status": "available"
    }
  ],
  "snapshot": null,
  "target": {
    "kind": null,
    "name": "default",
    "recorded": false
  }
}
