crates/ods-web/tests/snapshots/dashboard__shell_recorded.snap
---
source: crates/ods-web/tests/dashboard.rs
expression: pretty(&body)
---
{
  "mode": "local",
  "project": "jaffle_ods",
  "read_only": true,
  "schema_version": 2,
  "sections": [
    {
      "href": "./",
      "key": "home",
      "label": "Home",
      "note": null,
      "status": "current"
    },
    {
      "href": "catalog",
      "items": [
        {
          "href": "catalog",
          "key": "models",
          "label": "Models"
        },
        {
          "href": null,
          "key": "freshness",
          "label": "Freshness evidence"
        },
        {
          "href": null,
          "key": "semantic",
          "label": "Semantic layer"
        }
      ],
      "key": "catalog",
      "label": "Catalog",
      "note": null,
      "status": "available"
    },
    {
      "href": "lineage",
      "key": "lineage",
      "label": "Lineage",
      "note": null,
      "status": "available"
    },
    {
      "href": "state/plan",
      "items": [
        {
          "href": "state/plan",
          "key": "plan",
          "label": "Plan"
        },
        {
          "href": "state/runs",
          "key": "runs",
          "label": "Runs"
        },
        {
          "href": null,
          "key": "history",
          "label": "History"
        },
        {
          "href": null,
          "key": "policies",
          "label": "Policies"
        }
      ],
      "key": "state",
      "label": "State",
      "note": null,
      "status": "available"
    },
    {
      "href": null,
      "key": "erd",
      "label": "ERD",
      "note": "ERD pages are planned; the ERD module works from the CLI (ods erd …)",
      "status": "planned"
    },
    {
      "href": null,
      "key": "usage",
      "label": "Usage",
      "note": null,
      "status": "planned"
    },
    {
      "href": null,
      "key": "ci",
      "label": "CI · Impact",
      "note": null,
      "status": "planned"
    },
    {
      "href": null,
      "key": "agent",
      "label": "Agent",
      "note": null,
      "status": "planned"
    },
    {
      "href": null,
      "key": "settings",
      "label": "Settings",
      "note": null,
      "status": "planned"
    }
  ],
  "snapshot": {
    "id": 3,
    "recorded_at": "2026-09-29T11:56:00Z"
  },
  "target": {
    "kind": "warehouse",
    "name": "dev",
    "recorded": true
  }
}
